add filter by in the get all endpoint
